# taotie

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  pyproject.toml
.github/workflows/: build.yml
assets/: user.ndjson
examples/: arrow_serde.rs  ndjson.rs  pq.rs  repl.rs
notebooks/: Untitled.ipynb  pyproject.toml
src/: lib.rs  main.rs
src/backend/: datafusion.rs  describe.rs  mod.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
