[package]
name = "taotie"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
arrow = { version = "54.3.1", features = ["prettyprint"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
datafusion = { version = "46.0.1", features = ["serde"] }
dirs = "6.0.0"
enum_dispatch = "0.3.13"
oneshot = "0.1.11"
parquet = "54.3.1"
polars = { version = "0.46.0", features = ["parquet", "timezones", "sql", "lazy"] }
reedline-repl-rs = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "rt"] }
