[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wulawulu", email = "wutuobangbang@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "jupyterlab>=4.3.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
